Text and Title on Slide Done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
             <button class="circle up hidden">
                 <i class="fa-sharp fa-solid fa-angle-up"></i>
             </button>
-
+            <div id="card">
+                <div class="text-img">
+                    <div id="title">
+                        AAAAAAAAA
+                    </div>
+    
+                    <div id="text">
+                        aaassssssss
+                    </div>
+                </div>         
+            </div>
             <!-- Bottone freccia giù -->
             <button class="circle down">
                 <i class="fa-sharp fa-solid fa-angle-down"></i>
