Infinite Loop And Refactoring Done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Container slide -->
         <div class="item">
             <!-- Bottone freccia su -->
-            <button class="circle up hidden">
+            <button class="circle up">
                 <i class="fa-sharp fa-solid fa-angle-up"></i>
             </button>
             <div id="card">
