--- a/bonus/index.html
+++ b/bonus/index.html
@@ -19,27 +19,32 @@
 
         <!-- Container slide -->
         <div class="item">
-            <!-- Bottone freccia su -->
-            <button class="circle up">
-                <i class="fa-sharp fa-solid fa-angle-up"></i>
-            </button>
+            
 
             <!-- Card Foto -->
             <div id="card">
                 <div class="text-img">
-
                     <!-- Titolo Immagine -->
                     <div id="title"></div>
 
                     <!-- Testo Immagine -->
                     <div id="text"></div>
-                </div>         
+                </div>             
             </div>
 
-            <!-- Bottone freccia giù -->
-            <button class="circle down">
-                <i class="fa-sharp fa-solid fa-angle-down"></i>
-            </button>
+            <div id="preview">
+                <!-- Bottone freccia su -->
+                <button class="circle up">
+                    <i class="fa-sharp fa-solid fa-angle-up"></i>
+                </button>
+                
+                            <!-- Bottone freccia giù -->
+                <button class="circle down">
+                    <i class="fa-sharp fa-solid fa-angle-down"></i>
+                </button>
+            </div>
+
+
         </div>
     </div>
 
