--- a/bonus/index.html
+++ b/bonus/index.html
@@ -23,9 +23,20 @@
 
             <!-- Card Foto -->
             <div id="card">
+                <div class="button-card">
+                    <button id="start">
+                        <i class="fa-solid fa-play"></i>
+                    </button>
+
+                    <button id="stop">
+                        <i class="fa-solid fa-stop"></i>
+                    </button>
+                </div>
+                
                 <div class="text-img">
                     <!-- Titolo Immagine -->
                     <div id="title"></div>
+
 
                     <!-- Testo Immagine -->
                     <div id="text"></div>
