Debug version time reverse done

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -31,6 +31,10 @@
                     <button id="stop">
                         <i class="fa-solid fa-stop"></i>
                     </button>
+
+                    <button id="reverse">
+                        reverse
+                    </button>
                 </div>
                 
                 <div class="text-img">
