Time Reverse Done

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -24,6 +24,11 @@
             <!-- Card Foto -->
             <div id="card">
                 <div class="button-card">
+
+                    <button id="reverse">
+                        <i class="fa-solid fa-backward"></i>
+                    </button>
+
                     <button id="start">
                         <i class="fa-solid fa-play"></i>
                     </button>
@@ -32,9 +37,6 @@
                         <i class="fa-solid fa-stop"></i>
                     </button>
 
-                    <button id="reverse">
-                        reverse
-                    </button>
                 </div>
                 
                 <div class="text-img">
