All Project + All Bonus With More Features Done

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -29,11 +29,7 @@
                         <i class="fa-solid fa-backward"></i>
                     </button>
 
-                    <button id="start">
-                        <i class="fa-solid fa-play"></i>
-                    </button>
-
-                    <button id="stop">
+                    <button id="startStop">
                         <i class="fa-solid fa-stop"></i>
                     </button>
 
